Updates from Overleaf

--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -60,7 +60,7 @@ D_n & = \begin{vmatrix} 0 & 0 & \cdots & 0 & x^n+a_1x^{n-1}+\cdots+a_n \\ -1 & 0
 
 \newpageorvspace
 
-{\bf 补充题}. 设$f_k(x)$是数域$\mathbb{F}$上的$K$次多项式，其首项系数为$a_k \neq 0$, $k = 0,1,\cdots,n-1$。又设$b_1,b_2,\cdots,b_n\in\mathbb{F}$. 计算下列行列式
+{\bf 补充题}. 设$f_k(x)$是数域$\mathbb{F}$上的$k$次多项式，其首项系数为$a_k \neq 0$, $k = 0,1,\cdots,n-1$。又设$b_1,b_2,\cdots,b_n\in\mathbb{F}$. 计算下列行列式
 $$D = \begin{vmatrix}
 f_0(b_1) & f_0(b_2) & \cdots & f_0(b_n) \\
 f_1(b_1) & f_1(b_2) & \cdots & f_1(b_n) \\
@@ -68,7 +68,7 @@ f_1(b_1) & f_1(b_2) & \cdots & f_1(b_n) \\
 f_{n-1}(b_1) & f_{n-1}(b_2) & \cdots & f_{n-1}(b_n) \\
 \end{vmatrix}$$
 
-{\bf 解：}令$f_K(x) = \sum\limits_{i=1}^n c_{ik} x^{i-1}$, $c_{ik} = 0$当$i \geqslant k+1$, $c_{kk} = a_k$. 令
+{\bf 解：}令$f_k(x) = \sum\limits_{i=1}^n c_{ik} x^{i-1}$, $c_{ik} = 0$当$i \geqslant k+1$, $c_{kk} = a_k$. 令
 $$\beta_i = (b_1^{i}, b_2^{i}, \cdots, b_n^{i}), \quad i = 0,\cdots,n-1,$$
 那么有
 \begin{align*}
