Updates from Overleaf

--- a/assignments/assignment-6.tex
+++ b/assignments/assignment-6.tex
@@ -35,7 +35,7 @@ $$a_n = 2^n - 3^{n-1}$$
 $$g(x) = f(x) - L(x) = (x-1)(x-2)(x-3) h(x)$$
 于是在$\mathbb{R}[X]$中有
 $$f(x) \equiv L(x) \mod (x-1)(x-2)(x-3)$$
-观察两边最高次项知上式不可能成立。
+由于$f(X)$在$\mathbb{R}[x]$中利用辗转相除法除以$(x-1)(x-2)(x-3)$所得的商多项式与余多项式都是整系数的，所以上式不可能成立。
 
 \newpageorvspace
 
