--- a/assignments/assignment-8.tex
+++ b/assignments/assignment-8.tex
@@ -98,18 +98,47 @@ x-a_1 & a_1-a_2 & a_2-a_3 & \cdots & 0 \\ 0 & x-a_2 & a_2-a_3 & \cdots & 0 \\ 0 
 {\bf 习题3.3 第1题}.
 
 (1). 
+\begin{align*}
+D_n & = \begin{vmatrix} x & y & 0 & \cdots & 0 & 0 \\ 0 & x & y & \cdots & 0 & 0 \\ \vdots & \vdots & \vdots & \cdots & \vdots & \vdots \\ 0 & 0 & 0 & \cdots & x & y \\ y & 0 & 0 & \cdots & 0 & x \end{vmatrix} = x \begin{vmatrix} x & y & \cdots & 0 & 0 \\ \vdots & \vdots & \cdots & \vdots & \vdots \\ 0 & 0 & \cdots & x & y \\ 0 & 0 & \cdots & 0 & x \end{vmatrix} + (-1)^{n+1}y \begin{vmatrix} y & 0 & \cdots & 0 & 0 \\ x & y & \cdots & 0 & 0 \\ \vdots & \vdots & \cdots & \vdots & \vdots \\ 0 & 0 & \cdots & x & y \end{vmatrix} \\
+& = x^n + (-1)^{n+1}y^n = x^n - (-y)^n
+\end{align*}
 
 (3). 
+\begin{align*}
+D_n & = \begin{vmatrix} a+b & a & 0 & \cdots & \cdots & 0 \\ b & a+b & a & \cdots & \cdots & 0 \\ 0 & b & a+b & \ddots & & \vdots \\ \vdots & \vdots & \ddots & \ddots & \ddots & \vdots \\ \vdots & \vdots & & \ddots & \ddots & a \\ 0 & 0 & \cdots & \cdots & b & a+b \end{vmatrix} = (a+b)D_{n-1} - b \begin{vmatrix} a & 0 & \cdots & \cdots & 0 \\ b & a+b & a & & \vdots \\ \vdots & \ddots & \ddots & \ddots & \vdots \\ \vdots & & \ddots & \ddots & a \\ 0 & \cdots & \cdots & b & a+b \end{vmatrix}_{n-1} \\
+& = (a+b)D_{n-1} - baD_{n-2}
+\end{align*}
+所以$D_n = \lambda_1 a^n + \lambda_2 b^n$，代入$D_1=a+b,D_2=a^2+b^2+ab$得
+$$D_n = \begin{cases} \frac{1}{a-b}(a^{n+1} - b^{n+1}) & a \neq b \\ (n+1)a^b & a = b \end{cases}$$
 
-(5).
+(5). 与第(3)小题类似求得递推公式
+$$D_n = (x^2+1)D_{n-1} - x^2D_{n-2}$$
+令$D_n = \lambda_1 (x^2)^n + \lambda_2 1^n$，代入$D_1 = x^2+1, D_2 = x^4 + x^2 + 1$得
+$$D_n = 1+x^2+x^4+\cdots+x^{2n}$$
 
 \newpageorvspace
 
-{\bf 习题3.3 第2题}.
+{\bf 习题3.3 第2题}. 对于一个奇数阶($m\times m$)的反对称阵$M$, 有
+$$\det M = \det (-M^T) = (-1)^{m}\det M^T = -\det M,$$
+知$\det M = 0$.
+
+对于$A$, 考虑非对角元$a_{ij}$与$a_{ji}$, $i\neq j$, 对应的代数余子式$A_{ij}$, $A_{ji}$相应的方阵$M_{ij}$, $M_{ji}$. 由于$A$为反对称阵，容易知$M_{ij}^T = - M_{ji}$，所以有
+$$A_{ij} = (-1)^{i+j}\det M_{ij} = (-1)^{i+j}\det (-M_{ji}^T) = (-1)^{n-1}\cdot(-1)^{i+j}\det (M_{ji}^T) = -A_{ji}$$
+
+对角元$a_{ii}$对应代数余子式$A_{ii}$相应的方阵$M_{ii}$是奇数阶反对称阵，行列式为$0$.
+
+综上知偶数阶反对称阵所有元的代数余子式之和等于$0$.
 
 \newpageorvspace
 
-{\bf 习题3.3 第3题}.
+{\bf 习题3.3 第3题}. 记$\alpha_i = \begin{pmatrix} a_{i1} \\ \vdots \\ a_{in} \end{pmatrix}$为$A$的第$i$列，$e = \begin{pmatrix} 1 \\ \vdots \\ 1 \end{pmatrix}$, 那么
+\begin{align*}
+& \begin{vmatrix} a_{11} + x_1 & \cdots & a_{1n} + x_n \\ \vdots & & \vdots \\ a_{n1} + x_1 & \cdots & a_{nn} + x_n \end{vmatrix} = \det (\alpha_1+x_1e, \alpha_2+x_2e, \cdots, \alpha_n+x_ne) \\
+= & \det(\alpha_1, \alpha_2, \cdots, \alpha_n) + \det(x_1e, \alpha_2, \cdots, \alpha_n) + \det(\alpha_1, x_2e, \cdots, \alpha_n) + \cdots + \det(\alpha_1, \alpha_2, \cdots, x_ne) \\
+= & \det A + x_1\det(e, \alpha_2, \cdots, \alpha_n) + x_2\det(\alpha_1, e, \cdots, \alpha_n) + \cdots + x_n\det(\alpha_1, \alpha_2, \cdots, e) \\
+= & \det A + x_1\sum_{k=1}^nA_{k1} + x_2\sum_{k=1}^nA_{k2} + \cdots + + x_n\sum_{k=1}^nA_{kn} \\
+= & \det A + \sum_{j=1}^n x_j \sum_{k=1}^nA_{kj}
+\end{align*}
 
 
 \end{document}
