--- a/main.tex
+++ b/main.tex
@@ -5,12 +5,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2021秋高等代数习题课}
+% \title{2021秋高等代数习题课}
 
 % \input{content/class-1}
 % \input{content/class-2}
 % \input{content/class-3}
-\input{content/class-4}
+% \input{content/class-4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -19,7 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
 
-% \title{2021秋高等代数课后习题}
+\title{2021秋高等代数课后习题}
 
 % \input{assignments/assignment-1}
 % \input{assignments/assignment-2}
@@ -29,5 +29,6 @@
 % \input{assignments/assignment-6}
 % \input{assignments/assignment-7}
 % \input{assignments/assignment-8}
+\input{assignments/assignment-9}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
