add more content to class 4

--- a/assignments/assignment-9.tex
+++ b/assignments/assignment-9.tex
@@ -1,6 +1,6 @@
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{第八次作业}
+\date{第九次作业}
 
 \begin{document}
 
@@ -29,7 +29,7 @@ D_n & = \det (e+\alpha_1, e+\alpha_2, \cdots, e+\alpha_n) \\
 
 \newpageorvspace
 
-{\bf 习题3.5 第2题}. 令$\alpha_1 = \begin{pmatrix} -a_1 \\ a_2 \\ \vdots \\ a_n \end{pmatrix}$, $\ldots$, $\alpha_n = \begin{pmatrix} a_1 \\ \vdots \\ a_{n-1} \\ a_n \end{pmatrix}$, $e = \begin{pmatrix} 1 \\ \vdots \\ 1 \end{pmatrix}$, 那么类似第一题有
+{\bf 习题3.5 第2题}. 令$\alpha_1 = \begin{pmatrix} -a_1 \\ a_2 \\ \vdots \\ a_n \end{pmatrix}$, $\ldots$, $\alpha_n = \begin{pmatrix} a_1 \\ \vdots \\ a_{n-1} \\ -a_n \end{pmatrix}$, $e = \begin{pmatrix} 1 \\ \vdots \\ 1 \end{pmatrix}$, 那么类似第一题有
 \begin{align*}
 D_n & = \det(\alpha_1 + a_1e, \cdots, \alpha_n + a_ne) \\
 & = 2\det(\alpha_1, \cdots, \alpha_n) - \det\begin{pmatrix} 1 & a_1 & \cdots & a_n \\ e & \alpha_1 & \cdots & \alpha_n \end{pmatrix}
