--- a/main.tex
+++ b/main.tex
@@ -30,5 +30,6 @@
 % \input{assignments/assignment-7}
 % \input{assignments/assignment-8}
 % \input{assignments/assignment-9}
+% \input{assignments/assignment-10}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
