--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,8 @@
 % \input{content/class-1}
 % \input{content/class-2}
 % \input{content/class-3}
-\input{content/class-4}
+% \input{content/class-4}
+\input{content/class-5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
