add more details to class 5

--- a/content/class-5.tex
+++ b/content/class-5.tex
@@ -19,7 +19,12 @@
 {\bf 证明：} (1). 由于$(\lambda A)^*$第$(j,i)$位元素为$\lambda A$第$(i,j)$个代数余子式$(\lambda A)_{(i,j)}$。由于任意$n-1$阶方阵$B$都有$\det(\lambda B) = \lambda^{n-1}\det B$, 所以$(\lambda A)_{(i,j)} = \lambda^{n-1} A_{(i,j)}$, 进而有$(\lambda A)^* = \lambda^{n-1}A^*$.
 
 (2). 令$B^*A^* = (c_{ij})$, 那么
-$$c_{ij} = \sum\limits_{k=1}^n B_{ki} A_{jk} = (-1)^{2k}(-1)^{i+j} \det(\widehat{A}_j \widetilde{B}_i),$$
+\begin{align*}
+c_{ij} & = \sum\limits_{k=1}^n B_{ki} A_{jk} \\
+& = \sum\limits_{k=1}^n (-1)^{k+j}\det A\begin{pmatrix} 1,\cdots,j-1,j+1,\cdots,n \\ 1,\cdots,k-1,k+1,\cdots,n \end{pmatrix} \cdot (-1)^{k+i} \det B\begin{pmatrix} 1,\cdots,k-1,k+1,\cdots,n \\ 1,\cdots,i-1,i+1,\cdots,n \end{pmatrix} \\
+& = (-1)^{i+j} \sum\limits_{k=1}^n \det\widehat{A}_j\begin{pmatrix} 1,\cdots,n-1 \\ 1,\cdots,k-1,k+1,\cdots,n \end{pmatrix} \cdot \det \widetilde{B}_i\begin{pmatrix} 1,\cdots,k-1,k+1,\cdots,n \\ 1,\cdots,n-1 \end{pmatrix} \\
+& = (-1)^{i+j} \det(\widehat{A}_j \widetilde{B}_i),
+\end{align*}
 其中$B_{ki}, A_{jk}$分别为$B$在第$(k,i)$位的代数余子式与$A$在第$(j,k)$位的代数余子式，$\widehat{A}_j$为方阵$A$删掉第$j$行得到的$(n-1)\times n$的矩阵，$\widetilde{B}_i$为方阵$B$删掉第$i$列得到的$n\times (n-1)$的矩阵。后面这个等号是根据Binet-Cauchy公式（课本定理4.5.3(3)）得到的。
 
 另一方面，方阵$(AB)^*$的第$(i,j)$位元素，记为$d_{ij}$，为方阵$AB$的第$(j,i)$位代数余子式$(AB)_{ji}$, 其值为$(-1)^{i+j}$乘以方阵$AB$删掉第$j$行第$i$列得到的$n-1$阶方阵的行列式，此$n-1$阶方阵就等于$\widehat{A}_j \widetilde{B}_i$, 即我们会有
@@ -33,7 +38,7 @@ $$(AB)^* = \det(AB) \cdot (AB)^{-1} = (\det B \cdot B^{-1}) \cdot (\det A \cdot 
 $$(A(\lambda)B(\lambda))^* = B(\lambda)^*A(\lambda)^*$$
 对上式取极限$\lim\limits_{\mathring{U}(0,\delta) \ni x\to 0}$即有$(AB)^* = B^*A^*$.
 
-(3). 由于$A^*$的每个元素都是$A$的某个$n-1$阶代数余子式，所以若$r(A)\leqslant n-2$, 那么$A^* = 0$. 又由于$AA^* = \det A I_n$, 所以当$r(A) = n$时，$r(A^*) = n$. 当$r(A) = n-1$时，由于$r(A^*) + r(A) - n \leqslant r(AA^*)$, 所以$r(A^*) \leqslant 1$, 同时$A$至少有一个非零子式，即$A^*$至少有一个非零元，所以$r(A*) \geqslant 1$, 从而必须由$r(A^*) = 1$. 于是，我们证明了
+(3). 由于$A^*$的每个元素都是$A$的某个$n-1$阶代数余子式，所以若$r(A)\leqslant n-2$, 那么$A^* = 0$. 又由于$AA^* = \det A I_n$, 所以当$r(A) = n$时，$r(A^*) = n$. 当$r(A) = n-1$时，由于$r(A^*) + r(A) - n \leqslant r(AA^*)$, 所以$r(A^*) \leqslant 1$, 同时$A$至少有一个非零子式，即$A^*$至少有一个非零元，所以$r(A^*) \geqslant 1$, 从而必须有$r(A^*) = 1$. 于是，我们证明了
 $$r(A^*) = \begin{cases} n, & \text{ 若 } r(A) = n \\ 1, & \text{ 若 } r(A) = n-1 \\ 0, & \text{ 其余情况} \end{cases}$$
 所以当$n > 2$时，当$r(A) = n$时，
 $$(A^*)^* = \det A^* \cdot (A^*)^{-1} = (\det A)^{n-1} (\det A \cdot A^{-1})^{-1} = (\det A)^{n-2} A.$$
