--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,8 @@
 % \input{content/class-2}
 % \input{content/class-3}
 % \input{content/class-4}
-\input{content/class-5}
+% \input{content/class-5}
+\input{content/class-6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
