--- a/content/class-6.tex
+++ b/content/class-6.tex
@@ -2,7 +2,7 @@
 % \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{2021-11-26  第五次习题课}
+\date{2021-12-10  第六次习题课}
 
 \begin{document}
 
