--- a/content/class-6.tex
+++ b/content/class-6.tex
@@ -126,7 +126,7 @@ $$
 所以有
 $$
 \begin{pmatrix} \lambda_n \\ \vdots \\ \lambda_0 \end{pmatrix}
-= \begin{pmatrix} 1 & & & & \\ C_{n}^1c & 1 & & & \\ C_{n}^2c^2 & C_{n-1}^1c & 1 & & \\ \vdots & \vdots & \vdots & \ddots & \\ C_{n}^1c^n & C_{n-1}^{n-1}c^{n-1} & C_{n-2}^{n-2}c^{n-2} & \cdots & 1 \end{pmatrix}
+= \begin{pmatrix} 1 & & & & \\ C_{n}^1c & 1 & & & \\ C_{n}^2c^2 & C_{n-1}^1c & 1 & & \\ \vdots & \vdots & \vdots & \ddots & \\ C_{n}^nc^n & C_{n-1}^{n-1}c^{n-1} & C_{n-2}^{n-2}c^{n-2} & \cdots & 1 \end{pmatrix}
 \begin{pmatrix} a_n \\ \vdots \\ a_0 \end{pmatrix} = A\begin{pmatrix} a_n \\ \vdots \\ a_0 \end{pmatrix}.
 $$
 故$f(x) = a_0 + a_1x + \cdots + a_nx^n$在这组基下的坐标为
@@ -140,7 +140,7 @@ $$
 所以有
 $$
 \begin{pmatrix} a_n \\ \vdots \\ a_0 \end{pmatrix}
-= \begin{pmatrix} 1 & & & & \\ C_{n}^1(-c) & 1 & & & \\ C_{n}^2(-c)^2 & C_{n-1}^1(-c) & 1 & & \\ \vdots & \vdots & \vdots & \ddots & \\ C_{n}^1(-c)^n & C_{n-1}^{n-1}(-c)^{n-1} & C_{n-2}^{n-2}(-c)^{n-2} & \cdots & 1 \end{pmatrix}
+= \begin{pmatrix} 1 & & & & \\ C_{n}^1(-c) & 1 & & & \\ C_{n}^2(-c)^2 & C_{n-1}^1(-c) & 1 & & \\ \vdots & \vdots & \vdots & \ddots & \\ C_{n}^n(-c)^n & C_{n-1}^{n-1}(-c)^{n-1} & C_{n-2}^{n-2}(-c)^{n-2} & \cdots & 1 \end{pmatrix}
 \begin{pmatrix} \lambda_n \\ \vdots \\ \lambda_0 \end{pmatrix}
 = B \begin{pmatrix} \lambda_n \\ \vdots \\ \lambda_0 \end{pmatrix}
 $$
