--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,8 @@
 % \input{content/class-3}
 % \input{content/class-4}
 % \input{content/class-5}
-\input{content/class-6}
+% \input{content/class-6}
+\input{content/class-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
