--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -11,17 +11,19 @@
 {\bf 习题5.4 第10题}. 求证方程$x^3 - x^2 - \frac{1}{2}x - \frac{1}{6} = 0$的根不可能全为实数。
 
 {\bf 证明}：对于一个一般的$n$次多项式$f(x) = a_{n}x^{n}+a_{n-1}x^{n-1}+\cdots +a_{1}x+a_{0}$, 其判别式（discriminant）被定义为
-$$\Delta = a_n^{n-2} \prod_{i< j} (r_i - r_j)^2$$
-其中$r_1,\ldots, r_n$为$f(x)$在某个代数闭域上的$n$个根。对于3次实多项式$f(x) = ax^3+bx^2+cx_1+d$, $a > 0$, 来说，如果它有3个实根，那么显然它的判别式是一个非负实数；如果他有复根$\beta$, 那么$\beta$的复共轭$\bar{\beta}$也是它的复根。设它的另一个实根为$\alpha$，那么它的判别式为
-$$\Delta = a^4 (\alpha-\beta)^2(\alpha-\bar{\beta})^2(\beta-\bar{\beta})^2 = -a(\alpha^2-\alpha(\beta+\bar{\beta})+\beta\bar{\beta})^2 (\beta-\bar{\beta})^2$$
+$$\Delta = a_n^{2n-2} \prod_{i< j} (r_i - r_j)^2$$
+其中$r_1,\ldots, r_n$为$f(x)$在其分裂域（或者某个代数闭域）上的$n$个根。对于3次实多项式$f(x) = ax^3+bx^2+cx_1+d$来说，如果它有3个实根，那么显然它的判别式是一个非负实数；如果他有复根$\beta$, 那么$\beta$的复共轭$\bar{\beta}$也是它的复根。设它的另一个实根为$\alpha$，那么它的判别式为
+$$\Delta = a^4 (\alpha-\beta)^2(\alpha-\bar{\beta})^2(\beta-\bar{\beta})^2 = a^4 (\alpha^2-\alpha(\beta+\bar{\beta})+\beta\bar{\beta})^2 (\beta-\bar{\beta})^2$$
 因为$\alpha^2-\alpha(\beta+\bar{\beta})+\beta\bar{\beta}$是实数，$\beta-\bar{\beta}$是纯虚数，所以判别式在这种情况下必然是一个负实数。
 
 关于多项式判别式的计算，有如下结果
 $$\Delta = \frac{(-1)^{n(n-1)/2}}{a_n} R(f,f')$$
-其中$R(f,f')$为$f$与其导函数$f'$的结式。对于三次方程
+其中$R(f,f')$为$f$与其导函数$f'$的结式。对于一般的三次方程，其判别式为
 $$\Delta = b^{2}c^{2}-4ac^{3}-4b^{3}d-27a^{2}d^{2}+18abcd$$
 对于本题的$x^3 - x^2 - \frac{1}{2}x - \frac{1}{6}$, 其判别式为
 $$(-1)^2(-\frac{1}{2})^2 - 4(-\frac{1}{2})^3 - 4(-1)^3(-\frac{1}{6}) - 27(-\frac{1}{6})^2 + 18(-1)(-\frac{1}{2})(-\frac{1}{6}) = -\frac{13}{6} < 0$$
+或者做变量替换$x\to x+\frac{1}{3}$得到$x^{3} - \frac{5 x}{6} - \frac{11}{27}$，这个多项式的判别式的计算更简单
+$$\Delta = -4(-\frac{5}{6})^3 - 27 (\frac{11}{27})^2 = -\frac{13}{6} < 0.$$
 所以它有一个实根，两个共轭的复根。
 
 \newpageorvspace
@@ -30,8 +32,8 @@ $$(-1)^2(-\frac{1}{2})^2 - 4(-\frac{1}{2})^3 - 4(-1)^3(-\frac{1}{6}) - 27(-\frac
 {\bf 习题5.4 第11题}. 分别在复数域、实数域上将下列多项式分解为不可约多项式的乘积：(4) $x^{2n} + x^n + 1$.
 
 {\bf 解}. 多项式方程$y^2 + y + 1 = 0$的复根为$y = e^{2\pi i/3}, e^{4\pi i/3}$, 所以在复数域上有
-$$x^{2n} + x^n + 1 = \prod_{k=0}^{n-1} (x - e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}})(x - e^{\frac{\theta_2 i}{n} + \frac{2k\pi i}{n}}), \quad \theta_1 = \frac{2\pi}{3}, \theta_2 = \frac{4\pi}{3}.$$
-对于任意$0\leqslant k \leqslant n-1$, 取$k' = n-k-1$, 即有$0\leqslant k' \leqslant n-1$, 且$(\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}) + (\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}) = 2\pi i,$ 即$e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}}$与$e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}}$互为复共轭，即有
+$$x^{2n} + x^n + 1 = \prod_{k=0}^{n-1} \left(x - e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}}\right) \left(x - e^{\frac{\theta_2 i}{n} + \frac{2k\pi i}{n}}\right), \quad \theta_1 = \frac{2\pi}{3}, \theta_2 = \frac{4\pi}{3}.$$
+要求该多项式在实数域上的分解，只要将其复数域上的分解式中共轭的一次式拿到一起，得到实系数的二次式即可。对于任意$0\leqslant k \leqslant n-1$, 取$k' = n-k-1$, 即有$0\leqslant k' \leqslant n-1$, 且$(\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}) + (\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}) = 2\pi i,$ 即$e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}}$与$e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}}$互为复共轭，即有
 $$
 \begin{cases}
 e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}} + e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}} = \cos(\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}) \\
