fix typos in class 7

--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -22,7 +22,7 @@ $$\Delta = \frac{(-1)^{n(n-1)/2}}{a_n} R(f,f')$$
 $$\Delta = b^{2}c^{2}-4ac^{3}-4b^{3}d-27a^{2}d^{2}+18abcd$$
 对于本题的$x^3 - x^2 - \frac{1}{2}x - \frac{1}{6}$, 其判别式为
 $$(-1)^2(-\frac{1}{2})^2 - 4(-\frac{1}{2})^3 - 4(-1)^3(-\frac{1}{6}) - 27(-\frac{1}{6})^2 + 18(-1)(-\frac{1}{2})(-\frac{1}{6}) = -\frac{13}{6} < 0$$
-或者做变量替换$x\to x+\frac{1}{3}$得到$x^{3} - \frac{5 x}{6} - \frac{11}{27}$，这个多项式的判别式的计算更简单
+或者做变量替换$x\to x+\frac{1}{3}$得到$x^{3} - \frac{5}{6}x - \frac{11}{27}$，这个多项式的判别式的计算更简单
 $$\Delta = -4(-\frac{5}{6})^3 - 27 (\frac{11}{27})^2 = -\frac{13}{6} < 0.$$
 所以它有一个实根，两个共轭的复根。
 
@@ -31,17 +31,19 @@ $$\Delta = -4(-\frac{5}{6})^3 - 27 (\frac{11}{27})^2 = -\frac{13}{6} < 0.$$
 
 {\bf 习题5.4 第11题}. 分别在复数域、实数域上将下列多项式分解为不可约多项式的乘积：(4) $x^{2n} + x^n + 1$.
 
-{\bf 解}. 多项式方程$y^2 + y + 1 = 0$的复根为$y = e^{2\pi i/3}, e^{4\pi i/3}$, 所以在复数域上有
+{\bf 解}. 多项式方程$y^2 + y + 1 = 0$的复根为$y = e^{2\pi i/3}, e^{4\pi i/3}$, 那么多项式$x^{2n} + x^n + 1$在复数域上的根为
+$$e^{2\pi i/3n} \cdot e^{2k\pi i/n},\ e^{4\pi i/3n} \cdot e^{2k\pi i/n}, \quad 0 \leqslant k \leqslant n-1,$$
+所以在复数域上有
 $$x^{2n} + x^n + 1 = \prod_{k=0}^{n-1} \left(x - e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}}\right) \left(x - e^{\frac{\theta_2 i}{n} + \frac{2k\pi i}{n}}\right), \quad \theta_1 = \frac{2\pi}{3}, \theta_2 = \frac{4\pi}{3}.$$
 要求该多项式在实数域上的分解，只要将其复数域上的分解式中共轭的一次式拿到一起，得到实系数的二次式即可。对于任意$0\leqslant k \leqslant n-1$, 取$k' = n-k-1$, 即有$0\leqslant k' \leqslant n-1$, 且$(\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}) + (\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}) = 2\pi i,$ 即$e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}}$与$e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}}$互为复共轭，即有
 $$
 \begin{cases}
-e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}} + e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}} = \cos(\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}) \\
+e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}} + e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}} = 2 \cos \left( \frac{\theta_1}{n} + \frac{2k\pi}{n} \right) = 2 \cos \left( \frac{2\pi}{3n} + \frac{2k\pi}{n} \right) \\
 e^{\frac{\theta_1 i}{n} + \frac{2k\pi i}{n}} \cdot e^{\frac{\theta_2 i}{n} + \frac{2k'\pi i}{n}} = 1
 \end{cases}
 $$
 所以$x^{2n} + x^n + 1$在实数域上的分解为
-$$x^{2n} + x^n + 1 = \prod_{k=0}^{n-1} \left( x^2 -2 \cos \left( \frac{\theta_1 i}{n} + \frac{2k\pi i}{n} \right) + 1 \right)$$
+$$x^{2n} + x^n + 1 = \prod_{k=0}^{n-1} \left( x^2 - 2 \cos \left( \frac{2\pi}{3n} + \frac{2k\pi}{n} \right) + 1 \right)$$
 
 \newpageorvspace
 
@@ -53,7 +55,7 @@ $$\alpha^m = \alpha^n = 1,$$
 那么$\alpha^{am} = \alpha^{bn} = 1,$ 进而有
 $$\alpha = \alpha^{am+bn} = \alpha^{am} \cdot \alpha^{bn} = 1 \cdot 1 = 1$$
 
-另一种证明方法：$\Omega_m = \{ e^{\frac{2\pi k}{m}} \ |\ 0\leqslant k \leqslant m-1 \}$, $\Omega_n = \{ e^{\frac{2\pi k}{n}} \ |\ 0\leqslant k \leqslant n-1 \}$, 那么只要证明任取$0 < k < m$, $0 < k' < n$, 有$e^{\frac{2\pi k}{m}} \neq e^{\frac{2\pi k'}{n}}$即可。在这种情况下，只要证明$\frac{k}{m} \neq \frac{k'}{n}$即可。用反证法，假设$kn=k'm$, 由于$(m,n)=1$, 所以必须有
+另一种证明方法：$\Omega_m = \{ e^{\frac{2k\pi i}{m}} \ |\ 0\leqslant k \leqslant m-1 \}$, $\Omega_n = \{ e^{\frac{2k\pi i}{n}} \ |\ 0\leqslant k \leqslant n-1 \}$, 那么只要证明任取$0 < k < m$, $0 < k' < n$, 有$e^{\frac{2k\pi i}{m}} \neq e^{\frac{2k'\pi i}{n}}$即可。在这种情况下，只要证明$\frac{k}{m} \neq \frac{k'}{n}$即可。用反证法，假设$kn=k'm$, 由于$(m,n)=1$, 所以必须有
 $$m|k, n|k'$$
 同时成立，但这是不可能的。
 
