add new semester class 1

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2021秋高等代数习题课}
+\title{2022春高等代数习题课}
+
+\input{content-2/class-1}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 课后作业
+
+% \title{2022春高等代数课后习题}
+
+% \input{assignments/assignment-11}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 习题课
+
+% \title{2021秋高等代数习题课}
 
 % \input{content/class-1}
 % \input{content/class-2}
@@ -13,7 +27,7 @@
 % \input{content/class-4}
 % \input{content/class-5}
 % \input{content/class-6}
-\input{content/class-7}
+% \input{content/class-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
