init spring semester class 2

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,8 @@
 
 \title{2022春高等代数习题课}
 
-\input{content-2/class-1}
+% \input{content-2/class-1}
+\input{content-2/class-2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
