update class 2 of spring semester

--- a/content-2/class-2.tex
+++ b/content-2/class-2.tex
@@ -8,21 +8,21 @@
 
 \maketitle
 
-{\bf 第一题}. 
-
-{\bf 解}：
-
-\newpageorvspace
-
-
-{\bf 第二题}. 
+{\bf 第一题}. 设$A \in M_n (\mathbb{F})$, 并且$A^2 = I$. 证明$A$相似于矩阵$B = \begin{pmatrix} I_r & \\ & -I_s \end{pmatrix}$, 其中$r+s=n$.
 
 {\bf 证明}：
 
 \newpageorvspace
 
 
-{\bf 第三题}. 
+{\bf 第二题}. 若$A \in M_n (\mathbb{C})$满足$A^n = I$, 证明$A$的特征值是$n$次单位根。
+
+{\bf 证明}：
+
+\newpageorvspace
+
+
+{\bf 第三题}. 设$A, B \in M_n (\mathbb{F})$, $AB=BA$, 若$A,B$均相似于对角矩阵，证明存在可逆矩阵$P$使得$P^{-1}AP$与$P^{-1}BP$同时为对角形。
 
 {\bf 证明}：
 
@@ -30,7 +30,7 @@
 \newpageorvspace
 
 
-{\bf 习题6.2 第四题}.
+{\bf 习题6.2 第四题}. 设$V = M_n (\mathbb{F})$, $A,B \in M_n (\mathbb{F})$, 且满足$AB=BA$以及$A,B$均相似于对角矩阵。在$V$中定义线性变换$\sigma: X \mapsto AX - XB, \forall X \in V$. 判断$\sigma$是否可对角化并证明你的结论。
 
 {\bf 解}. 
 
